json 테스트 코드 전체 수정, gson 추가